# chatbot_dataset_tools

./: .env-example  .gitignore  README.md  pyproject.toml
chatbot_dataset_tools/: __init__.py
chatbot_dataset_tools/adapters/: __init__.py  alpaca.py  sharegpt.py
chatbot_dataset_tools/api/: __init__.py  client.py
chatbot_dataset_tools/config/: __init__.py  context.py  manager.py  schema.py
chatbot_dataset_tools/connectors/: __init__.py  base.py  file.py  http.py
chatbot_dataset_tools/core/: __init__.py  conversation.py  dataset.py  message.py  renderer.py  transform.py
chatbot_dataset_tools/datasets/: __init__.py  concat.py  dataset.py  dataset_loader.py  file_loader.py  in_memory_dataset.py  lazy_dataset.py
chatbot_dataset_tools/formatters/: __init__.py  alpaca.py  base.py  openai.py  sharegpt.py
chatbot_dataset_tools/generator/: __init__.py  mapping.py  scenario.py  synthesizer.py  task_runner.py  util.py
chatbot_dataset_tools/io/: __init__.py  reader.py  writer.py
chatbot_dataset_tools/ops/: __init__.py  filters.py  transforms.py
chatbot_dataset_tools/pipeline/: __init__.py  engine.py  schema.py
chatbot_dataset_tools/registry/: __init__.py  core.py  types.py
chatbot_dataset_tools/renderers/: __init__.py  presets.py  roleplay.py
core/: __init__.py  adapter.py  conversation.py  message.py  renderer.py  role.py
examples/: convert_alpaca.py  convert_sharegpt.py  data_creator.py  io_load.py  output_alpaca.json  output_data.jsonl  pipeline.py  sharegpt_example.json  sharegpt_example2.jsonl  test.jsonl  train.jsonl  use_dataset.py
(+53 files in other folders)
